--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -4,3 +4,6 @@
   box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
 }
+body {
+  background-image: linear-gradient(45deg, #ee9ca7 0%, #ffdde1 100%);
+}
